# mcp-server-motherduck

./: .gitignore  README.md  manifest.json  pyproject.toml  requirements.txt  server.json
api/: main.py
backend/: main.py  pyproject.toml
src/mcp_server_motherduck/: configs.py  database.py
