[project]
name = "mcp-server-motherduck-backend"
version = "1.0.7"
description = "MotherDuck MCP server exposed over Streamable HTTP on Vercel"
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.5.3",
    "fastmcp>=3.2",
    "click>=8.1.8",
    "pytz>=2025.2",
    "starlette>=0.37.0",
]

[tool.vercel]
entrypoint = "main.py"

[project.scripts]
mcp-server-motherduck-backend = "main:main"
